--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.cj</groupId>
-	<artifactId>springboot-demo</artifactId>
+	<artifactId>springboot-jpa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
-	<name>springboot-demo</name>
+	<name>springboot-jpa</name>
 	<description></description>
 
 	<parent>
